--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+<style>
+    body {
+        background-color: black;
+    }
+    .container {
+        height: 96vh;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
 <body>
-    <form action="<%- prefix %>/images/upload" method="POST" enctype="multipart/form-data">
-        <input type="text" name="title" placeholder="title">
-        <input type="file" name="image">
-        <button type="submit">Send</button>
-    </form>
+    <div class="container d-flex">
+        <div class="row">
+            <div class="d-flex justify-content-center card bg-dark text-white mt-5">
+                <h4 class="card-header text-center">Upload Image</h4>
+                <form class="card-body flex-column d-flex" action="<%- prefix %>/images/upload" method="POST" enctype="multipart/form-data">
+                    <input type="text" name="title" placeholder="Title" class="form-control">
+                    <input type="file" name="image" class="form-control mt-4">
+                    <button type="submit" class="btn btn-success btn-block mt-4">Send</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
